@@ -95,6 +95,7 @@
 - [DS-710] New Base Theme For DSpace 1.7.0
 - [DS-711] Discovery release for XMLUI
 - [DSCR-15] Scoped search in simple search form on navigation bar updated to use "discover" URL
+- [DSCR-16] Support for browsing facets after using "Search DSpace" in the navigation bar
 
 (Bill Hayes, Stuart Lewis)
 - [DS-738] sword.cfg seems no longer used after 1.5
